<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/joker"
        android:tint="#80000000"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint">
    </ImageView>

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/potta"
        android:text="@string/app_name"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:textColor="#ff6666"
        android:textSize="60sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="55sp"
        android:textAllCaps="true"
        android:fontFamily="@font/wald"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:textColor="@color/white"
        android:text="@string/description">
    </TextView>
    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:padding="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">
    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:padding="30dp"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/password">
    </EditText>
    <Button
        android:id="@+id/sign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:fontFamily="@font/wald"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@id/facebook"
        android:text="@string/sign"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp">
    </Button>
    <Button
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:fontFamily="@font/wald"
        android:background="@color/red"
        app:layout_constraintStart_toEndOf="@id/sign"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:layout_marginEnd="30dp">
    </Button>
    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/free"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/wald"
        android:text="@string/login">
    </Button>
    <Button
        android:id="@+id/free"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/free"
        android:textColor="@color/white"
        android:fontFamily="@font/wald"
        app:layout_constraintStart_toEndOf="@id/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>